subscribe command update

--- a/templates/setWebhook.html
+++ b/templates/setWebhook.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Set webhook</title>
 </head>
 <body>
-    <a href="/setwebhook">setWebhook</a>
-    <br>
-    <a href="/deletewebhook">deleteWebhook</a>
-    <br>
-    <a href="/sendFoodmsg">sendFoodmsg</a>
+    <h1>webhook is setted</h1>
+    <button onclick="goBack()">되돌아가기</button>
+    <script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
 </body>
 </html>
